Usage of Java 13, pom upgrade, sonarqube setup (without tests) Signed-off-by: Paulius Kazokas <pauliusleonardas@gmail.com>